--- a/.project
+++ b/.project
@@ -5,14 +5,21 @@ Version=0.1.6
 Component=gb.image
 Component=gb.gui
 Component=gb.form
+Component=gb.data
 Component=gb.dbus
 Component=gb.debug
 Component=gb.eval
+Component=gb.eval.highlight
+Component=gb.form.dialog
+Component=gb.util
+Component=gb.form.editor
 Component=gb.settings
+Component=gb.form.print
 Component=gb.term
 Component=gb.form.terminal
 Component=gb.logging
 Component=gb.net
+Library=:westwood/SharedMem:1.0
 Description="This Software will allow the user to manage test and program Lobot LX-16A and LX-15D servos thru the Lobot Buslinker version 2.2.\n\nThis is a very specialized usage senerio. These servos are normally used for robot or automation control.\n\nFixed some bugs added event for notice handler.\n\nMore Bugs Fixed Change how messages are dispatched. Unfortunately it made min message Tx to Rx time 4 ms  the actual bus speed is 3 ms for servo request to response.\nLooks like max servo per BusLinker is about 4 for good respose times, ie. 10 position checks and updates per second * 4 servos per cycle or 20 servos or so."
 Authors="Brian G  brian@westwoodsvcs.com"
 TabSize=2
